# aim1

./: .gitignore  CMakeLists.txt  push.sh
Camera/Data/: 041031420023.mvdat  042162020046.mvdat
Camera/log/: error_20260417-222045.2778  warning_20260315-175453.20872  warning_20260417-222036.2778  warning_20260418-093739.3748
MindVisionSdk/demo/GTK_Demo/: GTK_demo  Makefile  config.status
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
config/: Config.yaml  Config.yaml.save  calibration.yml
include/: CameraDriver.hpp  Config.hpp  EKF.hpp  KalmanFilter.hpp  KalmanTracker.hpp  Param.hpp  PnPSolver.hpp  PreProcess.hpp  SerialPort.hpp  TargetSelect.hpp  UdpLogger.hpp  YoloDetector.hpp
src/: CameraDriver.cpp  Config.cpp  EKF.cpp  KalmanFilter.cpp  KalmanTracker.cpp  PnPSolver.cpp  PreProcess.cpp  SerialPort.cpp  TargetSelect.cpp  UdpLogger.cpp  YoloDetector.cpp  main.cpp  main_test.cpp
